@@ -155,9 +155,9 @@ module Plist
 
     def self.element_type(item)
       return case item
-        when String, Symbol:          'string'
-        when Fixnum, Bignum, Integer: 'integer'
-        when Float:                   'real'
+        when String, Symbol;          'string'
+        when Fixnum, Bignum, Integer; 'integer'
+        when Float;                   'real'
         else
           raise "Don't know about this data type... something must be wrong!"
       end
